@@ -1,4 +1,5 @@
 
-* Add stdio streaming support - being worked on by Vivien Chappelier
+* Add fast stream skip support - being worked on by Damien Chavarria
+* Rewrite the stream code to use condition variables
 * Add ATI hardware MPEG decoding acceleration
 * Add MMX versions of pixel-doubled dither routines
